--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -31,7 +31,7 @@
     transition: 0.2s;
 }
 .explore-menu-list-item .active{
-    border: 4px solid #00ddff;
+    border: 4px solid #8b0000;
     padding: 2px;
 }
 .explore-menu-list-item p{
